--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -1,70 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Schedule for TechCon 2024</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Schedule for TechCon 2024</title>
+  <style>
+    /* Optional simple styling for clarity */
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+    }
+    nav a {
+      margin-right: 15px;
+      text-decoration: none;
+      color: #0366d6;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+    }
+    caption {
+      font-weight: bold;
+      margin-bottom: 10px;
+      text-align: left;
+    }
+    th, td {
+      border: 1px solid #ddd;
+      padding: 8px;
+    }
+    th {
+      background-color: #f4f4f4;
+      text-align: left;
+    }
+    footer {
+      margin-top: 40px;
+      font-size: 0.9em;
+      color: #666;
+      border-top: 1px solid #ddd;
+      padding-top: 10px;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>Schedule for TechCon 2024</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="register.html">Register</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header>
+    <h1>Schedule for TechCon 2024</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="register.html">Register</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
 
-    <main>
-        <table>
-            <caption>Detailed Schedule of Events for TechCon 2024</caption>
-            <thead>
-                <tr>
-                    <th scope="col">Time</th>
-                    <th scope="col">Session</th>
-                    <th scope="col">Speaker</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>09:00 - 09:30</td>
-                    <td>Opening Keynote</td>
-                    <td>Dr. Alice Johnson</td>
-                </tr>
-                <tr>
-                    <td>09:45 - 10:30</td>
-                    <td>Future of AI</td>
-                    <td>Prof. Michael Lee</td>
-                </tr>
-                <tr>
-                    <td>10:45 - 11:30</td>
-                    <td>Cybersecurity Trends</td>
-                    <td>Sarah Patel</td>
-                </tr>
-                <tr>
-                    <td>11:45 - 12:30</td>
-                    <td>Cloud Computing Workshop</td>
-                    <td>David Kim</td>
-                </tr>
-                <tr>
-                    <td>14:00 - 15:00</td>
-                    <td>Blockchain Innovations</td>
-                    <td>Maria Gomez</td>
-                </tr>
-                <tr>
-                    <td>15:15 - 16:00</td>
-                    <td>Closing Remarks</td>
-                    <td>Conference Chair</td>
-                </tr>
-            </tbody>
-        </table>
-    </main>
+  <main>
+    <table>
+      <caption>Detailed Schedule of Events for TechCon 2024</caption>
+      <thead>
+        <tr>
+          <th scope="col">Time</th>
+          <th scope="col">Session</th>
+          <th scope="col">Speaker</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>09:00 - 09:30</td>
+          <td>Opening Keynote</td>
+          <td>Dr. Jane Smith</td>
+        </tr>
+        <tr>
+          <td>09:45 - 10:30</td>
+          <td>Future of AI</td>
+          <td>John Doe</td>
+        </tr>
+        <tr>
+          <td>10:45 - 11:30</td>
+          <td>Cybersecurity Trends</td>
+          <td>Mary Johnson</td>
+        </tr>
+        <tr>
+          <td>11:45 - 12:30</td>
+          <td>Cloud Computing Workshop</td>
+          <td>Alex Lee</td>
+        </tr>
+        <tr>
+          <td>13:30 - 14:15</td>
+          <td>Networking Lunch</td>
+          <td>-</td>
+        </tr>
+        <tr>
+          <td>14:30 - 15:15</td>
+          <td>Blockchain Innovations</td>
+          <td>Emma Davis</td>
+        </tr>
+        <tr>
+          <td>15:30 - 16:15</td>
+          <td>Closing Panel Discussion</td>
+          <td>Various Speakers</td>
+        </tr>
+      </tbody>
+    </table>
+  </main>
 
-    <footer>
-        <p>&copy; 2024 TechCon Conference. All rights reserved.</p>
-    </footer>
+  <footer>
+    &copy; 2024 TechCon. All rights reserved.
+  </footer>
 </body>
 </html>
