--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Schedule for TechCon 2024</title>
   <style>
-    /* Optional simple styling for clarity */
     body {
       font-family: Arial, sans-serif;
       margin: 20px;
@@ -105,7 +104,7 @@
   </main>
 
   <footer>
-    &copy; 2024 TechCon. All rights reserved.
+    Copyright &copy; 2024 TechCon. All rights reserved.
   </footer>
 </body>
 </html>
