--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -2,45 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Schedule for TechCon 2024</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-    }
-    nav a {
-      margin-right: 15px;
-      text-decoration: none;
-      color: #0366d6;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 20px;
-    }
-    caption {
-      font-weight: bold;
-      margin-bottom: 10px;
-      text-align: left;
-    }
-    th, td {
-      border: 1px solid #ddd;
-      padding: 8px;
-    }
-    th {
-      background-color: #f4f4f4;
-      text-align: left;
-    }
-    footer {
-      margin-top: 40px;
-      font-size: 0.9em;
-      color: #666;
-      border-top: 1px solid #ddd;
-      padding-top: 10px;
-      text-align: center;
-    }
-  </style>
 </head>
 <body>
   <header>
@@ -52,7 +14,6 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
-
   <main>
     <table>
       <caption>Detailed Schedule of Events for TechCon 2024</caption>
@@ -64,47 +25,12 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <td>09:00 - 09:30</td>
-          <td>Opening Keynote</td>
-          <td>Dr. Jane Smith</td>
-        </tr>
-        <tr>
-          <td>09:45 - 10:30</td>
-          <td>Future of AI</td>
-          <td>John Doe</td>
-        </tr>
-        <tr>
-          <td>10:45 - 11:30</td>
-          <td>Cybersecurity Trends</td>
-          <td>Mary Johnson</td>
-        </tr>
-        <tr>
-          <td>11:45 - 12:30</td>
-          <td>Cloud Computing Workshop</td>
-          <td>Alex Lee</td>
-        </tr>
-        <tr>
-          <td>13:30 - 14:15</td>
-          <td>Networking Lunch</td>
-          <td>-</td>
-        </tr>
-        <tr>
-          <td>14:30 - 15:15</td>
-          <td>Blockchain Innovations</td>
-          <td>Emma Davis</td>
-        </tr>
-        <tr>
-          <td>15:30 - 16:15</td>
-          <td>Closing Panel Discussion</td>
-          <td>Various Speakers</td>
-        </tr>
+        <tr><td>09:00 - 09:30</td><td>Opening Keynote</td><td>Dr. Jane Smith</td></tr>
       </tbody>
     </table>
   </main>
-
   <footer>
-    Copyright &copy; 2024 TechCon. All rights reserved.
+    copyright &copy; 2024 TechCon. All rights reserved.
   </footer>
 </body>
 </html>
